[tabs]-[bug]: active state stuck
- only for --bornered and skin versions
- where the tab is clicked it takes on the active but doesn't take it off the old one and can't uncheck?
- i messed up the 'name' attribute, it wasn't matching

--- a/src/app/components/tabs/tabs.component.scss
+++ b/src/app/components/tabs/tabs.component.scss
@@ -6,14 +6,14 @@ $tabCount: 9;
   background: #fff;
 }
 
-@for $i from 1 through $tabCount {
+@for $i from 4 through $tabCount {
   #tab-#{$i}:checked ~ #content-#{$i}{
     @extend .show--tab--content;
   }
 }
 
 .tab__container--bordered {
-  @for $i from 1 through $tabCount {
+  @for $i from 4 through $tabCount {
     #tab-#{$i}:checked ~ #content-#{$i}{
       @extend .show--tab--content; 
     }
